Fix axis-container layout. Justify table alignment.

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     height: 100vh;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     .page {
         grid-template-columns: 1fr;
         grid-template-rows: 0.1fr 1fr 0.5fr 1fr;
@@ -16,10 +16,10 @@
     }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
     .page {
         grid-template-columns: auto 1fr;
-        grid-template-rows: 0.1fr 1fr 2fr;
+        grid-template-rows: 0.1fr 1.2fr 2fr;
         grid-template-areas:
         "heading heading"
         "axis inputValues"
@@ -29,8 +29,8 @@
 
 @media (min-width: 1000px) {
     .page {
-        grid-template-columns: auto 1fr 1fr;
-        grid-template-rows: 0.1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 0.1fr 1.2fr 1fr 1fr;
         grid-template-areas:
         "heading     heading      heading"
         "axis        resultsTable resultsTable"
@@ -57,18 +57,17 @@
 
 #canvas-container {
     grid-area: axis;
-    place-self: center;
-    aspect-ratio: 1/1;
+    display: flex;
+    place-content: center;
+}
+
+#axis-canvas {
+    width: 300px;
+    height: 300px;
 }
 
 svg > .figure:hover {
     fill: rgba(255, 00, 255, 0.6);
-}
-
-#axis-canvas {
-    width: 200px;
-    height: 200px;
-    /*background: cornflowerblue;*/
 }
 
 .resultsTable {
@@ -76,18 +75,26 @@ svg > .figure:hover {
 }
 
 #result-table {
+    width: 100%;
+}
 
+#result-table tbody > * {
+    border-collapse: collapse;
+    border: 4px solid rgba(217, 185, 230, 0.6);
+    text-align: center;
+    font-size: 20px;
 }
 
 .inputValues {
     grid-area: inputValues;
-    display: grid;
+    place-content: center;
+    display: flex;
     background: aquamarine;
 }
 
-/*.input-field {*/
-/*    justify-content: space-between;*/
-/*}*/
+.input-field {
+    justify-content: space-between;
+}
 
 input:invalid {
     background-color: ivory;
